--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  font-family:  'Roboto', sans-serif;
+
+  font-size: 20px;
+  font-weight: 400;
+  color: #000000;
+
+  box-sizing: border-box;
+}
+
+body,html{
+  height: 100%;
+}
+
+body{
+  background-color: #F6F7F9;
+  //background-color: #FFF;
+}
+
+.logo{
+  font-family: 'Audiowide', cursive;
+  font-weight: 600;
+  font-size: 50px;
+  //font-size: 100%;
+  color: #341d1d;
+  text-decoration: none;
+}
+
+.nav-link{
+  text-decoration: none;
+
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
