--- a/src/app/client/navigation-bar/login-dialog/login-dialog.component.scss
+++ b/src/app/client/navigation-bar/login-dialog/login-dialog.component.scss
@@ -50,14 +50,18 @@
 
 .dialog-action{
   width: 100%;
-
   height: 100%;
 }
 
 .dialog-input-container{
   margin: 5px 0;
-  height: 40px;
+  display: block;
+  //height: 40px;
 }
+
+//.fixed-height{
+//  height: 40px;
+//}
 
 .dialog-button{
   height: 40px;
@@ -87,9 +91,9 @@
 }
 
 .password-input-container{
+  //margin-top: 30px;
   display: flex;
   height: 100%;
-
 }
 
 .password-input{
@@ -100,7 +104,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  //height: 100%;
   width: 40px;
   //padding: 7px;
   border: 3px solid black;
