--- a/src/app/client/navigation-bar/navigation-bar.component.scss
+++ b/src/app/client/navigation-bar/navigation-bar.component.scss
@@ -2,8 +2,9 @@ $height: 60px;
 
 .nav-bar{
   //background-color: #242424;
-  background-color: #ffffff;
+  background-color: rgba(255,255,255,0.95);
   position: fixed;
+  z-index: 1;
   width: 100%;
   height: $height;
   top: 0;
@@ -103,6 +104,8 @@ $height: 60px;
     background-color: #f5f2f2;
     cursor: pointer;
   }
+
+  box-shadow: #ede4e4 1px 1px 5px 1px;
 }
 
 .user-container-menu.opened_user_menu{
