--- a/src/app/client/side-navigation-menu/side-navigation-menu.component.scss
+++ b/src/app/client/side-navigation-menu/side-navigation-menu.component.scss
@@ -5,6 +5,7 @@ $closedWidth: 50px;
   //background-color: #242424;
   background-color: #ffffff;
   //color: #f6f2f2;
+  z-index: 2;
   width: $closedWidth;
   position: fixed;
   top: 0;
