--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,5 +37,11 @@ body{
 
 }
 
+.validation-text {
+  color: #ff0000;
+  font-size: 12px;
+}
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
