created advertiseent response

--- a/src/app/client/navigation-bar/login-dialog/login-dialog.component.html
+++ b/src/app/client/navigation-bar/login-dialog/login-dialog.component.html
@@ -38,6 +38,7 @@
     <span *ngIf="!validateAuth" class="validation-text">Невірний логін або пароль спробуйте ще раз</span>
     <button class="dialog-button dialog-action" (click)="loginButtonClick()">Увійти</button>
     <button class="dialog-button dialog-action" (click)="loginRostClick()">Увійти rostyk.stup@gmail.com</button>
+    <button class="dialog-button dialog-action" (click)="loginUserClick()">Увійти user</button>
   </div>
   <div *ngSwitchCase="2">
     <div class="dialog-input-container">
