--- a/src/app/client/seller/create-advertisement/create-advertisement.component.scss
+++ b/src/app/client/seller/create-advertisement/create-advertisement.component.scss
@@ -312,8 +312,9 @@
 
 .adv-img {
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 160px;
+  height: 120px;
+  object-fit: cover                      ;
   border-radius: inherit;
   cursor: pointer;
 }
@@ -326,13 +327,13 @@
   background-color: rgba(0, 0, 0, .5);
   overflow: hidden;
   //width: 0;
-  width: 100px;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   //display: none;
-  height: 100%;
   transition: all .3s;
   border-radius: inherit;
 }
