--- a/src/app/client/navigation-bar/navigation-bar.component.html
+++ b/src/app/client/navigation-bar/navigation-bar.component.html
@@ -4,9 +4,9 @@
   </div>
   <div class="search-container">
     <div class="search-input-container">
-      <input type="text" class="search-input" placeholder="Пошук">
+      <input type="text" class="search-input" placeholder="Пошук" (change)="makeSearch()" [(ngModel)]="value">
     </div>
-    <div class="search-input-icon-container">
+    <div class="search-input-icon-container" (click)="makeSearch()">
       <img src="https://img.icons8.com/material/24/ffffff/search--v1.png"/>
     </div>
   </div>
