--- a/src/app/client/navigation-bar/navigation-bar.component.html
+++ b/src/app/client/navigation-bar/navigation-bar.component.html
@@ -18,6 +18,9 @@
     <div class="notification-container profile-button-container">
       <img src="https://img.icons8.com/material-outlined/35/000000/appointment-reminders--v1.png"/>
     </div>
+    <div  class="profile-button-container" *ngIf="userRole === 'ROLE_USER'" (click)="navigateToCart()">
+      <img  src="https://img.icons8.com/material-outlined/35/000000/shopping-cart--v1.png"/>
+    </div>
 
     <div class=" profile-button-container" (click)="openProfileMenu()">
       <img class="user-container" src="https://img.icons8.com/metro/30/000000/alien.png"/>
