--- a/src/app/client/navigation-bar/navigation-bar.component.scss
+++ b/src/app/client/navigation-bar/navigation-bar.component.scss
@@ -73,7 +73,7 @@ $height: 60px;
   height: 100%;
   align-items: center;
   justify-content: space-between;
-  width: 23%;
+  width: 30%;
   margin-right: 50px;
 }
 
@@ -122,6 +122,7 @@ $height: 60px;
   img{
     //border-radius: 50%;
     //margin-right: 5px;
+      outline: none;
   }
   display: flex;
   cursor: pointer;
@@ -131,11 +132,13 @@ $height: 60px;
 .user-info-container{
   border-radius: 5px;
   border: 3px solid black;
+
 }
 
 .profile-button-container:hover{
   background-color: #f8f5f5;
   color: #7a7a7a;
+
 }
 
 .outside-menu{
