--- a/src/app/client/search/search.component.scss
+++ b/src/app/client/search/search.component.scss
@@ -76,12 +76,6 @@
   font-weight: 700;
 }
 
-.price-icon {
-  fill: #000000;
-  width: 24px;
-  height: 24px;
-  margin: 0 5px;
-}
 
 .sort-elems-container {
   display: flex;
@@ -89,20 +83,48 @@
   //background-color: #f5f1f1;
   border: 2px solid black;
   border-radius: 5px;
-  padding: 5px;
+  height: 30px;
+  //padding: 0 5px;
 }
 
 .sort-elem {
   font-size: 13px;
   font-weight: 500;
-  padding: 0 5px;
-  height: 25px;
+  padding: 10px;
+  //height: 25px;
+  height: 100%;
   display: flex;
   align-items: center;
+  cursor: pointer;
+
+  span {
+    font-size: 13px;
+    font-weight: 500;
+  }
 }
 
 .sort-elem:not(:last-child) {
   border-right: 1px solid #a29e9e;
+}
+
+.sort-elem.selected{
+  background-color: #000000;
+  color: #f6f2f2;
+
+  span {
+    background-color: #000000;
+    color: #f6f2f2;
+  }
+}
+
+.price-icon {
+  width: 24px;
+  height: 24px;
+  margin: 0 5px;
+}
+
+g.selected{
+  fill: green;
 }
 
 .search-container {
