--- a/src/app/client/dialogs/choose-address-dialog/choose-address-dialog.component.html
+++ b/src/app/client/dialogs/choose-address-dialog/choose-address-dialog.component.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 </div>
-<div class="create-new-button-hover">
+<div class="create-new-button-container">
   <button class="andro-button creation-button" (click)="openAddressCreation()">
     Додати нову адресу
   </button>
