--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-*{
+* {
   padding: 0;
   margin: 0;
-  font-family:  'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 
   font-size: 20px;
   font-weight: 400;
@@ -14,25 +14,31 @@
   box-sizing: border-box;
 }
 
-body,html{
+body, html {
   height: 100%;
 }
 
-body{
+body {
   background-color: #F6F7F9;
   //background-color: #FFF;
 }
 
-.logo{
+.logo {
   font-family: 'Audiowide', cursive;
+  //font-family: 'Roboto', cursive;
   font-weight: 600;
   font-size: 50px;
+  //font-size: 30px;
   //font-size: 100%;
   color: #341d1d;
   text-decoration: none;
 }
 
-.nav-link{
+.footer-logo {
+  font-size: 20px;
+}
+
+.nav-link {
   text-decoration: none;
 
 }
@@ -42,6 +48,41 @@ body{
   font-size: 12px;
 }
 
+.create-address-dialog .mat-dialog-container {
+  overflow: visible;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+$footerHeight: 60px;
+
+.index-content-holder {
+  min-height: 100%;
+  padding-bottom: $footerHeight + 100px;
+  margin-bottom: -$footerHeight;
+}
+
+.footer {
+  font-size: 15px;
+  font-weight: 300;
+
+  background-color: #f5f1f1;
+
+  //position: absolute;
+  //bottom: 0;
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: $footerHeight;
+}
+
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
